# smude

./: .gitignore  LICENSE.md  README.md  environment.yml  example.py  pyproject.toml  setup.py
smude/: __init__.py  binarize.py  cli.py  model.py  mrcdi.py  roi.py  utils.py
